ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: be
            port: 
              number: 5000
      - path: /image
        pathType: Prefix
        backend:
          service:
            name: be
            port: 
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe
            port: 
              number: 3000
